fix: enhance background opacity for better visibility in contact section

--- a/contact.css
+++ b/contact.css
@@ -101,7 +101,7 @@ body{
     top: 60px;
     height: 0;
     width: 300px;
-    background: rgba(27, 40, 221, 0.24);
+    background: rgba(27, 40, 221, 0.616);
     backdrop-filter: blur(100px);
     border-radius: 10px;
     overflow: hidden;
